# sprite-parser

./: Cargo.toml  README.md
parser/src/: spritesheet.rs
sprite-parser/src/: sprite.rs
src/: lib.rs
viewer/: Cargo.toml
viewer/src/: main.rs
