[package]
name = "sprite-parser"
version = "0.1.0"
authors = ["fwtn <fwtn+git@fireturtle.net>"]
edition = "2018"

[[bin]]
name = "viewer"
required-features = ["viewer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
viewer = ["sdl2"]

[dependencies]

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["ttf","image","gfx","mixer","bundled"]